objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Market_Segment2__c</fullName>
        <label>Market Segment2</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Automotive</fullName>
                </value>
                <value>
                    <fullName>Compute, Connect, Store (CCS)</fullName>
                </value>
                <value>
                    <fullName>Consumer</fullName>
                </value>
                <value>
                    <fullName>Industrial,Medical &amp;Scientific</fullName>
                </value>
                <value>
                    <fullName>Mobility</fullName>
                </value>
                <value>
                    <fullName>Testchip</fullName>
                </value>
                <value>
                    <fullName>Aerospace &amp; Defense</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Market_Segment__c</fullName>
        <label>Market Segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Automotive</fullName>
                </value>
                <value>
                    <fullName>Compute, Connect, Store (CCS)</fullName>
                </value>
                <value>
                    <fullName>Consumer</fullName>
                </value>
                <value>
                    <fullName>Industrial,Medical &amp;Scientific</fullName>
                </value>
                <value>
                    <fullName>Mobility</fullName>
                </value>
                <value>
                    <fullName>Testchip</fullName>
                </value>
                <value>
                    <fullName>Aerospace &amp; Defense</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marketing_Comment_on_Account__c</fullName>
        <label>Marketing Comment on Account</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Marketing_Territory__c</fullName>
        <description>Marketing Territory</description>
        <inlineHelpText>Marketing Territory</inlineHelpText>
        <label>Marketing Territory</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>US-East</fullName>
                </value>
                <value>
                    <fullName>US-Major</fullName>
                </value>
                <value>
                    <fullName>US</fullName>
                </value>
                <value>
                    <fullName>Japan Korea</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>EMEA-ROA</fullName>
                </value>
                <value>
                    <fullName>Other – Region</fullName>
                </value>
                <value>
                    <fullName>US-Majors</fullName>
                </value>
                <value>
                    <fullName>A&amp;D</fullName>
                </value>
                <value>
                    <fullName>US West1</fullName>
                </value>
                <value>
                    <fullName>US SoCal1</fullName>
                </value>
                <value>
                    <fullName>US NW</fullName>
                </value>
                <value>
                    <fullName>US SoCal2</fullName>
                </value>
                <value>
                    <fullName>US Central1</fullName>
                </value>
                <value>
                    <fullName>US Central2</fullName>
                </value>
                <value>
                    <fullName>US SW</fullName>
                </value>
                <value>
                    <fullName>US SoCal3</fullName>
                </value>
                <value>
                    <fullName>US NorCal</fullName>
                </value>
                <value>
                    <fullName>US NE1</fullName>
                </value>
                <value>
                    <fullName>US NE2</fullName>
                </value>
                <value>
                    <fullName>US SE</fullName>
                </value>
                <value>
                    <fullName>US West2</fullName>
                </value>
                <value>
                    <fullName>US NE3</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>Korea</fullName>
                </value>
                <value>
                    <fullName>ASIC-NA</fullName>
                </value>
                <value>
                    <fullName>ASIC-AP</fullName>
                </value>
                <value>
                    <fullName>ASIC-EMEA</fullName>
                </value>
                <value>
                    <fullName>ASIC-JP</fullName>
                </value>
                <value>
                    <fullName>Taiwan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <label>Opportunity Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Profile__c</fullName>
        <description>Contains the Owners profile name and updated via workflow rule.</description>
        <label>Owner Profile</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Point_of_Contact_at_GLOBALFOUNDRIES__c</fullName>
        <description>List of Customer&apos;s POC within GLOBALFOUNDRIES</description>
        <inlineHelpText>Identify your point of contact within GLOBALFOUNDRIES if applicable.</inlineHelpText>
        <label>Point of Contact at GLOBALFOUNDRIES</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Probability__c</fullName>
        <label>Probability</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Process_Family_Requested_by_Customer__c</fullName>
        <label>Process Family Requested by Customer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Super Low Power</fullName>
                </value>
                <value>
                    <fullName>Super High Performance</fullName>
                </value>
                <value>
                    <fullName>Low Power eDRAM</fullName>
                </value>
                <value>
                    <fullName>Interposer</fullName>
                </value>
                <value>
                    <fullName>SOI</fullName>
                </value>
                <value>
                    <fullName>MEMS</fullName>
                </value>
                <value>
                    <fullName>High Performance / Low Voltage</fullName>
                </value>
                <value>
                    <fullName>Low Power / Ultra Low Leakage</fullName>
                </value>
                <value>
                    <fullName>Photonics</fullName>
                </value>
                <value>
                    <fullName>Generic / Nominal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Process_Tech_Interested__c</fullName>
        <label>Process Tech. Interested</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mainstream Digital Technology (&gt;40nm)</fullName>
                </value>
                <value>
                    <fullName>Advanced Digital Technology (&lt;=32nm)</fullName>
                </value>
                <value>
                    <fullName>Analog Mixed Signal</fullName>
                </value>
                <value>
                    <fullName>High Voltage</fullName>
                </value>
                <value>
                    <fullName>MEM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Purpose_for_Registration__c</fullName>
        <inlineHelpText>Please select all that applies.</inlineHelpText>
        <label>Purpose for Registration</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Need Account Manager to Contact Me</fullName>
                </value>
                <value>
                    <fullName>Information about GLOBALFOUNDRIES</fullName>
                </value>
                <value>
                    <fullName>Want Information about Product Offering</fullName>
                </value>
                <value>
                    <fullName>Access to FoundryView (Customer Portal)</fullName>
                </value>
                <value>
                    <fullName>Access to Tech Files (PDK, DM, etc)</fullName>
                </value>
                <value>
                    <fullName>Immediate Opportunity (within 3 months)</fullName>
                </value>
                <value>
                    <fullName>Mid-Range Opportunity (3-6 months)</fullName>
                </value>
                <value>
                    <fullName>Long-Range Opportunity (&gt; 6 months)</fullName>
                </value>
                <value>
                    <fullName>Other (please specify in comment)</fullName>
                </value>
                <value>
                    <fullName>Request for Portal Access</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AP</fullName>
                </value>
                <value>
                    <fullName>JAPAN</fullName>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>US-West</fullName>
                </value>
                <value>
                    <fullName>A&amp;D</fullName>
                </value>
                <value>
                    <fullName>US-East</fullName>
                </value>
                <value>
                    <fullName>US-SoCal</fullName>
                </value>
                <value>
                    <fullName>ASIC-US</fullName>
                </value>
                <value>
                    <fullName>ASIC-EMEA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Revenue_Potential__c</fullName>
        <description>This field is managed by marketing.</description>
        <label>Revenue Potential (MKTG)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High Potential</fullName>
                </value>
                <value>
                    <fullName>Low Potential</fullName>
                </value>
                <value>
                    <fullName>Medium Potential</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Territory__c</fullName>
        <label>Sales Territory</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Region__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>US-East</fullName>
                </value>
                <value>
                    <fullName>US West1</fullName>
                </value>
                <value>
                    <fullName>US SoCal1</fullName>
                </value>
                <value>
                    <fullName>EMEA-ROA</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>Japan Korea</fullName>
                </value>
                <value>
                    <fullName>US NW</fullName>
                </value>
                <value>
                    <fullName>US SoCal2</fullName>
                </value>
                <value>
                    <fullName>US Central1</fullName>
                </value>
                <value>
                    <fullName>SEC-Foundry</fullName>
                </value>
                <value>
                    <fullName>MRVL</fullName>
                </value>
                <value>
                    <fullName>NVDA</fullName>
                </value>
                <value>
                    <fullName>A&amp;D</fullName>
                </value>
                <value>
                    <fullName>US Central2</fullName>
                </value>
                <value>
                    <fullName>US SW</fullName>
                </value>
                <value>
                    <fullName>US SoCal3</fullName>
                </value>
                <value>
                    <fullName>US NorCal</fullName>
                </value>
                <value>
                    <fullName>US NE1</fullName>
                </value>
                <value>
                    <fullName>US NE2</fullName>
                </value>
                <value>
                    <fullName>US SE</fullName>
                </value>
                <value>
                    <fullName>US West2</fullName>
                </value>
                <value>
                    <fullName>US NE3</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>Korea</fullName>
                </value>
                <value>
                    <fullName>ASIC-NA</fullName>
                </value>
                <value>
                    <fullName>ASIC-AP</fullName>
                </value>
                <value>
                    <fullName>ASIC-EMEA</fullName>
                </value>
                <value>
                    <fullName>ASIC-JP</fullName>
                </value>
                <value>
                    <fullName>Taiwan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Site_Department__c</fullName>
        <label>Site/Department</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Type__c</fullName>
        <label>Sub Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Account_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Direct</fullName>
                </value>
                <value>
                    <fullName>Indirect</fullName>
                </value>
                <value>
                    <fullName>Unclassified</fullName>
                </value>
                <value>
                    <fullName>ASIC Partner</fullName>
                </value>
                <value>
                    <fullName>Channel Partner</fullName>
                </value>
                <value>
                    <fullName>Assembly &amp; Test Partner</fullName>
                </value>
                <value>
                    <fullName>Design Service Partner</fullName>
                </value>
                <value>
                    <fullName>EDA Partner</fullName>
                </value>
                <value>
                    <fullName>IP Partner</fullName>
                </value>
                <value>
                    <fullName>Mask Partner</fullName>
                </value>
                <value>
                    <fullName>GLOBALSHUTTLE</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>DE - IP</fullName>
                </value>
                <value>
                    <fullName>TD</fullName>
                </value>
                <value>
                    <fullName>FAB 1</fullName>
                </value>
                <value>
                    <fullName>FAB 2</fullName>
                </value>
                <value>
                    <fullName>FAB 3</fullName>
                </value>
                <value>
                    <fullName>FAB 3E</fullName>
                </value>
                <value>
                    <fullName>FAB 5</fullName>
                </value>
                <value>
                    <fullName>FAB 6</fullName>
                </value>
                <value>
                    <fullName>FAB 7</fullName>
                </value>
                <value>
                    <fullName>FAB 8</fullName>
                </value>
                <value>
                    <fullName>FAB 9</fullName>
                </value>
                <value>
                    <fullName>Analysts</fullName>
                </value>
                <value>
                    <fullName>Investors</fullName>
                </value>
                <value>
                    <fullName>Press</fullName>
                </value>
                <value>
                    <fullName>DE – IP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__SurveyReminder__c</fullName>
        <defaultValue>&apos;&apos;</defaultValue>
        <label>SurveyReminder</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__reminderStringSize__c</fullName>
        <formula>LEN(TIMBASURVEYS__SurveyReminder__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>reminderStringSize</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target_Account__c</fullName>
        <description>This field is managed by marketing.</description>
        <label>Target Account (MKTG)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Not Assigned</fullName>
                    <default>true</default>
                    <label>Not Assigned</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Lifetime_Revenue_AM__c</fullName>
        <label>Total Lifetime Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Lifetime_Revenue__c</fullName>
        <description>Total Lifetime Revenue based upon the simple calculation of Total Program Value X GF Target Share. This will not be converted from lead to Opportunity as the Opportunity has a more complex formula based upon quarterly revenue input.</description>
        <formula>Total_Program_Value__c  *  GF_Target_Share__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Lifetime Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Program_Value__c</fullName>
        <description>Total Program Value entered in the lead that eventually will be pushed to the Opportunity when converted.</description>
        <inlineHelpText>Also known as SAM (Serviceable Available Market). Total value of the program by summing all sources participating in the program. In the case of an IDM, include the value of the internal source. In the case of multi-sources, include all sources.</inlineHelpText>
        <label>Total Program Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <label>Transaction Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Transactional</fullName>
                </value>
                <value>
                    <fullName>Non-Transactional</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unauthorized_Modified_Date__c</fullName>
        <label>Unauthorized Modified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Unauthorized_Percentage__c</fullName>
        <inlineHelpText>Matching percentage with MKD list</inlineHelpText>
        <label>Unauthorized %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unauthorized__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to validate whether lead valid or invalid</description>
        <inlineHelpText>Flag set after validating lead with MKD system, only GTC team can make update it.</inlineHelpText>
        <label>Unauthorized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X1st_Product_Production_Date__c</fullName>
        <description>1st Product Production Date to be converted from lead to opportunity.</description>
        <inlineHelpText>1st Product Production Date to be converted from lead to opportunity.</inlineHelpText>
        <label>1st Product Production Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X1st_Product_TO_Date__c</fullName>
        <label>1st Product TO Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Years_of_Production__c</fullName>
        <label>Years of Production</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AP_Lead_Queue_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>AP Lead Queue</label>
        <queue>AP_Lead_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASIC_A_D_Lead_Queue_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>ASIC/A&amp;D Lead Queue</label>
        <queue>ASIC_A_D_Lead_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>Hot_Lead__c</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Region__c</columns>
        <columns>Account_Type__c</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <label>All Leads</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Leads_2014</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>12/31/2013 12:00 AM</value>
        </filters>
        <label>All Leads 2014</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Default_Lead_Queue_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Default Lead Queue</label>
        <queue>Default_Lead_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_Queue_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>EU Lead Queue</label>
        <language>en_US</language>
        <queue>EUR_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>GC_Lead_Assignment_Queue_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>GC Lead Assignment Queue</label>
        <queue>GC_Lead_Assignment_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>GF_APM_2013_Customer</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>Additional_Comments__c</columns>
        <columns>Marketing_Comment_on_Account__c</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COUNTRY</columns>
        <columns>Region__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Geometry_Requested_by_Customer__c</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.CONVERTED</columns>
        <filterScope>Everything</filterScope>
        <label>GF APM 2013 Customer</label>
    </listViews>
    <listViews>
        <fullName>Japan_Korea_Queue_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Japan/Korea Queue</label>
        <queue>Japan_Korea_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Japan_Lead_Queue_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Japan Lead Queue</label>
        <queue>Japan_Lead_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Lead_to_Account_ASIC_A_D_Queue_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Lead to Account ASIC/A&amp;D Queue</label>
        <queue>Lead_to_Account_ASIC_A_D_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Leads_from_Asia_Technical_Seminar</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>Region__c</columns>
        <columns>Sales_Territory__c</columns>
        <columns>LEAD.STATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN_MEMBER.STATUS</field>
            <operation>equals</operation>
            <value>Responded,Sent</value>
        </filters>
        <label>Leads from Asia Technical Seminar</label>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
    </listViews>
    <listViews>
        <fullName>My_2051_Leads</fullName>
        <columns>LEAD.LAST_UPDATE</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Process_Family_Requested_by_Customer__c</columns>
        <columns>Geometry_Requested_by_Customer__c</columns>
        <columns>Region__c</columns>
        <columns>Sales_Territory__c</columns>
        <columns>Market_Segment__c</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>Purpose_for_Registration__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>LEAD.LAST_UPDATE</field>
            <operation>greaterThan</operation>
            <value>12/31/2014 12:00 AM</value>
        </filters>
        <label>My 2015 Leads</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <recordTypes>
        <fullName>Sales_Partner_Lead</fullName>
        <active>true</active>
        <businessProcess>Sales Partner Leads</businessProcess>
        <label>Sales Partner Lead</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Corporate_Address_Mandatory</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
IsConverted, 
OR(Corporate_Address_1__c == null,Corporate_Address_1__c == &apos;&apos;) 
)</errorConditionFormula>
        <errorMessage>Corporate Address 1 is mandatory for converting lead to Account</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Corporate_City_Mandatory</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
IsConverted, 
OR( Corporate_City__c  == null,Corporate_City__c == &apos;&apos;) 
)</errorConditionFormula>
        <errorMessage>Corporate city is mandatory for converting lead to Account</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Corporate_State_requied_for_USA_Country</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( Corporate_Country__c , &quot;USA&quot;) &amp;&amp; ISPICKVAL (Corporate_State__c , &quot;&quot;)</errorConditionFormula>
        <errorDisplayField>Corporate_State__c</errorDisplayField>
        <errorMessage>Corporate State is required for USA Corporate Country</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Opportunity_Validation_Rule</fullName>
        <active>true</active>
        <errorConditionFormula>IsConverted &amp;&amp; ConvertedOpportunityId != null</errorConditionFormula>
        <errorMessage>Please check the &apos;Do not create a new opportunity upon conversion.&apos; and try again</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Probability</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
   Probability__c &gt; 1.0,
   Probability__c &lt; 0.0
)</errorConditionFormula>
        <errorDisplayField>Probability__c</errorDisplayField>
        <errorMessage>Probability range should be between 0 to 100% only.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Spam_Trap_for_First_and_Last_Name_same</fullName>
        <active>true</active>
        <errorConditionFormula>FirstName = LastName</errorConditionFormula>
        <errorDisplayField>X1st_Product_Production_Date__c</errorDisplayField>
        <errorMessage>This is spam (first name and last name identical)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Lead_Country_Format</fullName>
        <active>false</active>
        <description>Validate Lead Country field contains the proper format for the United S:tates.</description>
        <errorConditionFormula>CONTAINS(&quot;US:U.S.:USA:U.S.A.&quot;, UPPER (Country))</errorConditionFormula>
        <errorMessage>The country must be United States, not US, U.S., USA, or U.S.A.</errorMessage>
    </validationRules>
</CustomObject>